# sifter

./: .gitmodules  Cargo.toml
crates/config/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/faiss/: Cargo.toml
crates/faiss/src/: binary_index.rs  error.rs  lib.rs
crates/faiss_sys/: Cargo.toml  build.rs
crates/faiss_sys/src/: lib.rs
crates/indexing/: Cargo.toml
crates/indexing/src/: binary_index.rs  distance_metrics.rs  error.rs  index.rs  lib.rs
crates/intake/: Cargo.toml
crates/intake/src/: lib.rs
crates/query_parser/: Cargo.toml
crates/query_parser/src/: lib.rs  query.lalrpop
crates/sifter/: Cargo.toml
crates/sifter_proto/: Cargo.toml  build.rs
crates/sifter_proto/proto/: common.proto
crates/sifter_proto/src/: lib.rs
crates/sifter_proto/src/proto/: mod.rs  sifter.proto.common.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  page.rs  page_manager.rs  source.rs
crates/store/src/index/: mod.rs
crates/store/src/page/: cache.rs  manager.rs  mod.rs  page.rs  rwa_lock.rs
rfcs/: datastore_092423.md  query_language_092623.md
