[package]
name = "faiss"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
enum_dispatch = "0.3.12"
error = {path = "../error"}
tokio = { version = "1.32.0", features = ["io-util", "sync"] }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["io-util", "sync", "rt", "macros"] }
